* version 0.1.3 + added game launch

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+-==================== Vertion 0.1.3 ====================-
+ + If game found in registry, save & close button launches it.
+
 -==================== Vertion 0.1.2 ====================-
  + Added "Aspect ratio"
 
