--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+-==================== Vertion 0.1.4 ====================-
+ * forum link opens in default browser
+ * email colored correctly
+ * fixed critical bug, when game wasn't launched if path contained spaces
+
 -==================== Vertion 0.1.3 ====================-
  + If game found in registry, save & close button launches it.
 
